src/snapshots/ghqctoolkit__issues__tests__issue_body_snapshot_with_rel_files.snap
---
source: src/issues.rs
expression: body
---
## Metadata
* initial qc commit: abc123def456789
* git branch: feature/new-feature
* author: John Doe (john@example.com)
* collaborators: Jane Smith (jane@example.com)
* [file contents at initial qc commit](https://github.com/owner/repo/blob/abc123d/src/example.rs)

## Relevant files

- **rel file**
	- [`path/to/file.rel`](https://github.com/owner/repo/blob/feature/new-feature/path/to/file.rel)
	> this
	> is
	> a note
- **rel file2**
	- [`path/to/file2.rel`](https://github.com/owner/repo/blob/feature/new-feature/path/to/file2.rel)
        
# Code Review Checklist

NOTE

- [ ] Code compiles without warnings
- [ ] Tests pass
- [ ] Documentation updated
